--- a/IntranetWeb/IntranetWeb/IntranetWeb.csproj
+++ b/IntranetWeb/IntranetWeb/IntranetWeb.csproj
@@ -68,6 +68,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="RegistrarUsuario.aspx" />
+    <Content Include="VerNoticias.aspx" />
+    <Content Include="VerPaginas.aspx" />
+    <Content Include="VerUsuarios.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -79,12 +83,40 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistrarUsuario.aspx.cs">
+      <DependentUpon>RegistrarUsuario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RegistrarUsuario.aspx.designer.cs">
+      <DependentUpon>RegistrarUsuario.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
+    <Compile Include="VerNoticias.aspx.cs">
+      <DependentUpon>VerNoticias.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VerNoticias.aspx.designer.cs">
+      <DependentUpon>VerNoticias.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="VerPaginas.aspx.cs">
+      <DependentUpon>VerPaginas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VerPaginas.aspx.designer.cs">
+      <DependentUpon>VerPaginas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="VerUsuarios.aspx.cs">
+      <DependentUpon>VerUsuarios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VerUsuarios.aspx.designer.cs">
+      <DependentUpon>VerUsuarios.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
