--- a/IntranetWeb/IntranetWeb/IntranetWeb.csproj
+++ b/IntranetWeb/IntranetWeb/IntranetWeb.csproj
@@ -69,6 +69,9 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="EditarUsuario.aspx" />
+    <Content Include="Noticia.aspx" />
+    <Content Include="Novedades.aspx" />
+    <Content Include="RegistrarNoticia.aspx" />
     <Content Include="RegistrarUsuario.aspx" />
     <Content Include="VerNoticias.aspx" />
     <Content Include="VerPaginas.aspx" />
@@ -90,7 +93,28 @@
     <Compile Include="EditarUsuario.aspx.designer.cs">
       <DependentUpon>EditarUsuario.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Noticia.aspx.cs">
+      <DependentUpon>Noticia.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Noticia.aspx.designer.cs">
+      <DependentUpon>Noticia.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Novedades.aspx.cs">
+      <DependentUpon>Novedades.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Novedades.aspx.designer.cs">
+      <DependentUpon>Novedades.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistrarNoticia.aspx.cs">
+      <DependentUpon>RegistrarNoticia.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RegistrarNoticia.aspx.designer.cs">
+      <DependentUpon>RegistrarNoticia.aspx</DependentUpon>
+    </Compile>
     <Compile Include="RegistrarUsuario.aspx.cs">
       <DependentUpon>RegistrarUsuario.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
