--- a/IntranetWeb/IntranetWeb/IntranetWeb.csproj
+++ b/IntranetWeb/IntranetWeb/IntranetWeb.csproj
@@ -77,6 +77,10 @@
     <Content Include="Content\estilos.css" />
     <Content Include="Default.aspx" />
     <Content Include="EditarUsuario.aspx" />
+    <Content Include="Home.aspx" />
+    <Content Include="Images\foto_1280x1920.jpg" />
+    <Content Include="Images\foto_400x300.jpg" />
+    <Content Include="Login.aspx" />
     <Content Include="Noticia.aspx" />
     <Content Include="Novedades.aspx" />
     <Content Include="RegistrarNoticia.aspx" />
@@ -100,6 +104,20 @@
     </Compile>
     <Compile Include="EditarUsuario.aspx.designer.cs">
       <DependentUpon>EditarUsuario.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Noticia.aspx.cs">
       <DependentUpon>Noticia.aspx</DependentUpon>
