se incluye el metodo de validacion del rut

--- a/IntranetWeb/IntranetWeb/IntranetWeb.csproj
+++ b/IntranetWeb/IntranetWeb/IntranetWeb.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
+    <Compile Include="Validador.cs" />
     <Compile Include="VerNoticias.aspx.cs">
       <DependentUpon>VerNoticias.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
