--- a/IntranetWeb/IntranetModel/IntranetModel.csproj
+++ b/IntranetWeb/IntranetModel/IntranetModel.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Correspondencias.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAL\NoticiasDAL.cs" />
     <Compile Include="DAL\UsuariosDAL.cs" />
     <Compile Include="Departamentos.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -90,6 +91,7 @@
     <Compile Include="Paginas.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Partials\NoticiaParcial.cs" />
     <Compile Include="Partials\UsuarioParcial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesUsuario.cs">
