--- a/IntranetWeb/IntranetWeb/packages.config
+++ b/IntranetWeb/IntranetWeb/packages.config
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.17.1" targetFramework="net472" />
+  <package id="AngleSharp.Css" version="0.17.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.61" targetFramework="net472" />
+  <package id="HtmlSanitizer" version="8.0.865" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net472" />
 </packages>
