--- a/IntranetWeb/IntranetModel/IntranetModel.csproj
+++ b/IntranetWeb/IntranetModel/IntranetModel.csproj
@@ -57,6 +57,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DAL\NoticiasDAL.cs" />
+    <Compile Include="DAL\PaginasDAL.cs" />
     <Compile Include="DAL\UsuariosDAL.cs" />
     <Compile Include="Departamentos.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -92,6 +93,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Partials\NoticiaParcial.cs" />
+    <Compile Include="Partials\PaginaParcial.cs" />
     <Compile Include="Partials\UsuarioParcial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesUsuario.cs">
