se avanza en creacion de post noticia

--- a/IntranetWeb/IntranetModel/IntranetModel.csproj
+++ b/IntranetWeb/IntranetModel/IntranetModel.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArchivosMultimedia.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="ComentariosNoticias.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
