se añade nueva cadena de url para las noticias creadas y en ver noticias se añade opcion para ver las noticias publicadas

--- a/IntranetWeb/IntranetWeb/Web.config
+++ b/IntranetWeb/IntranetWeb/Web.config
@@ -45,4 +45,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Noticia">
+          <match url="^noticias/([a-zA-Z0-9-]+)$" />
+          <action type="Rewrite" url="Noticia.aspx?url=noticias/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
