--- a/IntranetWeb/IntranetWeb/IntranetWeb.csproj
+++ b/IntranetWeb/IntranetWeb/IntranetWeb.csproj
@@ -363,7 +363,9 @@
     <Content Include="EditarUsuario.aspx" />
     <Content Include="Home.aspx" />
     <Content Include="Images\descarga.svg" />
+    <Content Include="Images\foto_1280x1920.jpg" />
     <Content Include="Login.aspx" />
+    <Content Include="Noticia.aspx" />
     <Content Include="Novedades.aspx" />
     <Content Include="RegistrarNoticia.aspx" />
     <Content Include="RegistrarPagina.aspx" />
@@ -415,6 +417,13 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Noticia.aspx.cs">
+      <DependentUpon>Noticia.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Noticia.aspx.designer.cs">
+      <DependentUpon>Noticia.aspx</DependentUpon>
     </Compile>
     <Compile Include="Novedades.aspx.cs">
       <DependentUpon>Novedades.aspx</DependentUpon>
