--- a/IntranetWeb/IntranetWeb/IntranetWeb.csproj
+++ b/IntranetWeb/IntranetWeb/IntranetWeb.csproj
@@ -362,12 +362,9 @@
     <Content Include="EditarPagina.aspx" />
     <Content Include="EditarUsuario.aspx" />
     <Content Include="Home.aspx" />
-    <Content Include="Images\descarga.svg" />
-    <Content Include="Images\foto_1280x1920.jpg" />
-    <Content Include="Images\nota1_900x400.jpg" />
-    <Content Include="Images\nota2_900x400.jpg" />
-    <Content Include="Images\nota3_900x400.jpg" />
     <Content Include="Login.aspx" />
+    <Content Include="Multimedia\ImagenesEstaticas\foto_1280x1920.jpg" />
+    <Content Include="Multimedia\ImagenesEstaticas\gptw600x400.jpg" />
     <Content Include="Noticia.aspx" />
     <Content Include="Novedades.aspx" />
     <Content Include="RegistrarNoticia.aspx" />
