--- a/IntranetWeb/IntranetModel/IntranetModel.csproj
+++ b/IntranetWeb/IntranetModel/IntranetModel.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Correspondencias.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAL\CorrespondenciasDAL.cs" />
     <Compile Include="DAL\NoticiasDAL.cs" />
     <Compile Include="DAL\PaginasDAL.cs" />
     <Compile Include="DAL\UsuariosDAL.cs" />
