--- a/IntranetWeb/IntranetWeb/IntranetWeb.csproj
+++ b/IntranetWeb/IntranetWeb/IntranetWeb.csproj
@@ -105,8 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\estilos.css" />
-    <Content Include="Content\sidebar\sidebars.css" />
-    <Content Include="Content\sidebar\sidebars.js" />
+    <Content Include="Cultura.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="EditarCorrespondencia.aspx" />
     <Content Include="EditarNoticia.aspx" />
@@ -130,6 +129,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cultura.aspx.cs">
+      <DependentUpon>Cultura.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Cultura.aspx.designer.cs">
+      <DependentUpon>Cultura.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
