--- a/IntranetWeb/IntranetModel/IntranetModel.csproj
+++ b/IntranetWeb/IntranetModel/IntranetModel.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DAL\HijosDAL.cs" />
     <Compile Include="DAL\NoticiasDAL.cs" />
     <Compile Include="DAL\PaginasDAL.cs" />
+    <Compile Include="DAL\PromocionesDAL.cs" />
     <Compile Include="DAL\UsuariosDAL.cs" />
     <Compile Include="Departamentos.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -97,6 +98,9 @@
     <Compile Include="Partials\NoticiaParcial.cs" />
     <Compile Include="Partials\PaginaParcial.cs" />
     <Compile Include="Partials\UsuarioParcial.cs" />
+    <Compile Include="Promociones.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesUsuario.cs">
       <DependentUpon>Model1.tt</DependentUpon>
